Import of JENDA/Config-IniHash-2.3 from CPAN.
gitpan-cpan-distribution: Config-IniHash
gitpan-cpan-version:      2.3
gitpan-cpan-path:         JENDA/Config-IniHash-2.3.tar.gz
gitpan-cpan-author:       JENDA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,3 +5,6 @@ Revision history for Perl extension Config::IniHash.
 
 2.2  Thu Dec 5 2002
 	- some fixes and tuneups
+
+2.3  Sun Nov 5 2003
+	- Makefile.PL and use statement fixes
