Import of JENDA/Config-IniHash-2.8 from CPAN.
gitpan-cpan-distribution: Config-IniHash
gitpan-cpan-version:      2.8
gitpan-cpan-path:         JENDA/Config-IniHash-2.8.tar.gz
gitpan-cpan-author:       JENDA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -21,3 +21,7 @@ Revision history for Perl extension Config::IniHash.
 
 2.7  Fri Nov 05 2004
 	- fixed WriteINI's handling of multiline values
+
+2.8  Sun Feb 20 2005
+	- you may specify what hash to take the %varname%s from
+	- you may specify what do comments look like
