Import of JENDA/Config-IniHash-3.00.03 from CPAN.
gitpan-cpan-distribution: Config-IniHash
gitpan-cpan-version:      3.00.03
gitpan-cpan-path:         JENDA/Config-IniHash-3.00.03.tar.gz
gitpan-cpan-author:       JENDA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -34,3 +34,6 @@ Revision history for Perl extension Config::IniHash.
 	- fixed the interoperation of case and sectionorder
 	- added ability to tie the hashes to custom classes
 	- added lots of tests
+
+3.00.03 Sun Jan 18 2009
+	- fixed the test to work on Unixes (the TEMP variable was not defined and %ENV is case sensitive under Unix)
