Import of JENDA/Config-IniHash-3.00.05 from CPAN.
gitpan-cpan-distribution: Config-IniHash
gitpan-cpan-version:      3.00.05
gitpan-cpan-path:         JENDA/Config-IniHash-3.00.05.tar.gz
gitpan-cpan-author:       JENDA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -40,3 +40,7 @@ Revision history for Perl extension Config::IniHash.
 
 3.00.04 Mon Jan 19 2009
 	- erm. hopefully the test script finaly works under unix
+
+3.00.05 Mon Jan 26 2009
+	- erm. hopefully the test script finaly works under unix
+	- it now doesn't attempt to create files in the temp directory
