Import of JENDA/Config-IniHash-3.01.00 from CPAN.
gitpan-cpan-distribution: Config-IniHash
gitpan-cpan-version:      3.01.00
gitpan-cpan-path:         JENDA/Config-IniHash-3.01.00.tar.gz
gitpan-cpan-author:       JENDA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -44,3 +44,8 @@ Revision history for Perl extension Config::IniHash.
 3.00.05 Mon Jan 26 2009
 	- erm. hopefully the test script finaly works under unix
 	- it now doesn't attempt to create files in the temp directory
+
+3.01.00 Thu May 28 2009
+	- added the layer=> option to allow you to specify the IO layers used to open the file
+	- add :utf8 layer automaticaly for files starting with BOM
+	- add :crlf layer for files containing CRLF if needed
