--- a/Changes
+++ b/Changes
@@ -49,3 +49,6 @@ Revision history for Perl extension Config::IniHash.
 	- added the layer=> option to allow you to specify the IO layers used to open the file
 	- add :utf8 layer automaticaly for files starting with BOM
 	- add :crlf layer for files containing CRLF if needed
+
+3.01.01 Mon Jun 8 2009
+	- fix a bug with repeated sections
